# egauche

./: .gitignore  COPYING  COPYING-PLAIN  Makefile.am  README  autogen.sh  configure.ac  e-module-egauche.edc  module.desktop.in  x.sh
src/: Makefile.am  e_mod_gauche.c  e_mod_gauche.h  e_mod_main.c  ew.c  ew.h  main.c  test-main.scm
